fix: modal background higher z-index

--- a/components/UI/Modal/BaseModal.module.scss
+++ b/components/UI/Modal/BaseModal.module.scss
@@ -14,6 +14,7 @@
 }
 
 .modal__background {
+	z-index: 9999999999;
 	position: absolute;
 	top: 0;
 	left: 0;
